-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1008 2011-05-05 17:30:07 guru Exp $
-----------------------------------------------------------------------------------------

2011-05-05	pwessel
	* gmtconvert_func.c:	The -T was applied before reading, which reset -m.
	* mapproject_func.c:	The -L would set output types as lon/lat even for Cartesian data.

2011-05-04	pwessel
	* gmtapi_util.c:	Set BCs for all grids regardless of read-source, even if
				read-only (REF) since we don't change grid, just the pad
				which is not considered part of the data.
	* imgsrc/img2grd_func.c:	Made clear that -D, -I, -T are optional and added
				-n to change how interpolations are done.  Also allow -S
				with no scale which will infer scale from filename.
	* splitxyz_func.c:	Now working, improved -N after gmtconvert's -D.

2011-05-03	pwessel
	* grdhisteq_func.c:	Now treats input grids as read-only.
	* greenspline_func.c:	Now treats input grids as read-only.
	* grdfft_func.c:	Now treats input grids as read-only.
	* grdvolume_func.c:	Now treats input grids as read-only.
	* grdvector_func.c:	Now treats input grids as read-only.
	* pstext_func.c:	The -A can reset the text angle but also needs to reset justification
	* grdfilter_func.c:	Bad col_in set as i_orig was reset incorrectly.
	
2011-05-03	jluis
	* trend1d_func.c:	Added -F...|p as an option to output only the model coefficients 

2011-05-02	pwessel
	* gmt_init.c:		FORMAT_FLOAT_OUT can now be used to set column-specific
				formats using comma-separated <cols>:<format> specifications.
				The last format without leading <cols>: overrides the default
				format for all unspecified columns.
				The -h[i|o][<n>] option now works for binary files where <n>
				is interpreted to be the number of bytes to skip/pad.
	* gmtmath_func.c:	Added NORM which scales A so max-min == 1.
	* grdmath_func.c:	Added NORM which scales A so max-min == 1.

2011-05-02	remko